src/objects/Member_Role__c.object
<CustomObject>
    <fields>
        <fullName>Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Association</label>
        <referenceTo>Association__c</referenceTo>
        <relationshipLabel>Member Roles</relationshipLabel>
        <relationshipName>Member_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Legal_Case__c</referenceTo>
        <relationshipLabel>Member Roles</relationshipLabel>
        <relationshipName>Member_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Roles</relationshipLabel>
        <relationshipName>Member_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <label>Member Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Member Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>